<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.BITP3454.mydailyexpenses.ExpensesMainActivity" >

    <TextView
        android:id="@+id/txtVwGr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:text="@string/lblExpName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtExpName"
        android:layout_width="3000dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtVwGr"
        android:layout_alignBottom="@+id/txtVwGr"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/txtVwGr"
        android:ems="10"
        android:hint="Lunch, Naruto Manga etc" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVwGr"
        android:layout_below="@+id/edtExpName"
        android:layout_marginTop="14dp"
        android:text="@string/lblPrice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:hint="@string/lblPriceHint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPrice"
        android:layout_marginTop="98dp"
        android:layout_toLeftOf="@+id/edtExpName"
        android:onClick="fnSave"
        android:text="@string/lblSave" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtPrice"
        android:layout_below="@+id/edtPrice"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtDate"
        android:layout_alignBottom="@+id/edtDate"
        android:layout_toLeftOf="@+id/btnSave"
        android:text="@string/lblDate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>